# rift

./: .gitignore  Cargo.toml  LICENSE  justfile
.github/workflows/: regen.yml
crates/dragon/: Cargo.toml
crates/dragon/src/: cache.rs  client.rs  config.rs  error.rs  lib.rs  locale.rs  models.rs  url.rs
crates/dragon/tests/: cache.rs  live.rs  locale.rs
crates/rift/: Cargo.toml
crates/rift/examples/: account_by_riot_id.rs  league_ladder.rs  live_client.rs  match_history_walk.rs  rso_flow.rs  tft.rs  val.rs
crates/rift/src/: cache.rs  client.rs  config.rs  error.rs  hooks.rs  lib.rs  pagination.rs  rate_limit.rs  raw.rs  rso.rs
crates/rift/src/live_client/: mod.rs  models.rs
crates/rift/tests/: cache.rs  client.rs  error.rs  live.rs  live_client.rs  pagination.rs  rate_limit.rs  rso.rs
crates/srcgen/: Cargo.toml
crates/srcgen/spec-manual/: league-v4-get-league-by-id.json
crates/srcgen/src/: fetch.rs  main.rs  naming.rs  spec.rs
crates/srcgen/src/generate/: consts.rs  docs.rs  endpoints.rs  meta.rs  mod.rs  models.rs  overlay.rs  routes.rs
