[workspace]
members = ["crates/dragon", "crates/rift", "crates/srcgen"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.103"
bytes = "1.12.1"
dotenvy = "0.15.7"
mimalloc = "0.1.52"
percent-encoding = "2.3.2"
reqwest = { version = "0.13.4", features = ["query"] }
rustc-hash = "2.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "time"] }
tracing = "0.1.41"
ureq = "3.3.0"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
format_push_string = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
